--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@
   margin: 0 auto;
   padding-bottom: 5em;
   width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .body {
