--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
   width: 100%;
 }
 
+.avatar {
+
+}
+
 .board {
   margin: 0 auto;
   padding-bottom: 5em;
@@ -106,4 +110,8 @@
 
 .w-100 {
   width: 100%;
+}
+
+.paddingXD{
+  padding: 3em;
 }
