--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,10 @@
 
 .assistant .avatar {
   border-radius: 50%;
+  margin-top: 4em;
   margin-bottom: 1em;
-  width: 100%;
+  width: 150px;
+  height: 150px;
 }
 
 .avatar {
@@ -29,6 +31,7 @@
   width: 70%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -113,8 +116,4 @@
 
 .w-100 {
   width: 100%;
-}
-
-.paddingXD{
-  padding: 3em;
 }
